--- a/Regression_with_Keras.ipynb
+++ b/Regression_with_Keras.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjs6gHGrIU/7WFKbz3j6Vv",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOG1mJnuOSW+PewRwApvKL2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +26,16 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Ktembhurne/DL/blob/main/Regression_with_Keras.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Regression With Keras\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "a9sohdKO8JQ-"
+      }
     },
     {
       "cell_type": "markdown",
